# ReactionT5-bo-yield

./: .gitignore  LICENSE  README.md  bo_yield.ipynb  bo_yield_NiB.ipynb  bo_yield_SM.ipynb  bo_yield_aap9112.ipynb  data_processing.py  greedy_optuna.ipynb  greedy_optuna_NiB.ipynb  greedy_yeaild.ipynb  greedy_yeaild_NiB.ipynb  greedy_yeaild_SM.ipynb  greedy_yeaild_aap9112.ipynb  main.ipynb  pyproject.toml
data/: aap9112_Data_File_S1.csv  aap9112_reaction_t5_ready.csv  inchi_23l_reaction_t5_ready.csv
data/Buchwald-Hartwig/: Dreher_and_Doyle_canonicalized.csv  Dreher_and_Doyle_complete_grid.csv  Dreher_and_Doyle_input_data.csv  Dreher_and_Doyle_reaction.csv  Dreher_and_Doyle_reaction_t5_ready.csv
data/NiB/: inchi_23l_canonicalized.csv  inchi_23l_reaction_t5_ready.csv
data/Suzuki-Miyaura/: aap9112_canonicalized.csv  aap9112_complete_grid.csv  aap9112_reaction_t5_ready.csv
data_utils/Buchwald-Hartwig/: data_processing.py  extract_complete_grid.py  generate_buchwald_hartwig.py  to_combined_csv.py
data_utils/NiB/: data_processing.py
data_utils/Suzuki-Miyaura/: data_processing.py  extract_complete_grid.py
notebooks/: bo_yield_BH.ipynb  bo_yield_NiB.ipynb  bo_yield_SM.ipynb  compare_all_results.ipynb  gnn_yield.ipynb  gpr_yield_BH.ipynb  gpr_yield_NiB.ipynb  gpr_yield_SM.ipynb  greedy_yield_BH.ipynb  greedy_yield_NiB.ipynb  greedy_yield_SM.ipynb  optuna_yield_BH.ipynb  optuna_yield_NiB.ipynb  optuna_yield_SM.ipynb  visualize_all_results.ipynb  visualize_dataset_overlap.ipynb  visualize_dateset_umap.ipynb
scripts/bo_yield/: README.md  bayesian_optimizer.py  data_utils.py  model_utils.py  run_all_seeds.py  run_all_seeds_BH.sh  run_all_seeds_NiB.sh  run_all_seeds_SM.sh  run_experiment.py  training_utils.py  (+1 more)
utils/: data_processing.py  data_processing_aap9112.py
(+33 files in other folders)
