[project]
name = "reactiont5-bo-yield"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "openpyxl>=3.1.5",
    "optuna>=4.4.0",
    "optuna-dashboard>=0.19.0",
    "pandas>=2.3.1",
    "rdkit>=2025.3.5",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
    "torch>=2.8.0",
    "transformers[torch]>=4.55.0",
]
