[project]
name = "reactiont5-bo-yield"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gpytorch>=1.15.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "openpyxl>=3.1.5",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "pyg-lib>=0.5.0",
    "rdkit>=2025.3.5",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torch-cluster>=1.6.3",
    "torch-geometric>=2.7.0",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "torch-spline-conv>=1.2.2",
    "transformers[torch]>=4.55.0",
    "umap-learn>=0.5.9.post2",
]

[tool.uv]
find-links = ["https://data.pyg.org/whl/torch-2.8.0+cu128.html"]
